tests/machine/x/ocaml/typed_let.ml
let y = ()

let () =
  print_endline y
